# lecture-transcriber

./: .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.ollama.yml  docker-compose.yml  post-create.sh
.github/workflows/: docker-publish.yml  pyinstaller-publish.yml  release-from-pyproject.yml
project/: main.py
src/lecture_transcriber/: __init__.py  __main__.py  app.py  config.py  faster_whisper_provider.py  fp_core.py  groq_provider.py  ollama_provider.py  processing_mixin.py  provider_protocols.py  providers.py  translations.py  ui_results_mixin.py
